[gd_scene load_steps=5 format=3 uid="uid://lpuqutgh2h0y"]

[ext_resource type="Script" path="res://app/main-menu/select-difficulty/select_difficulty.gd" id="1_pomqh"]
[ext_resource type="PackedScene" uid="uid://desy7wwqh5j8x" path="res://ui/game-ui/game-header.tscn" id="2_8ovqq"]
[ext_resource type="PackedScene" uid="uid://l4g7jgfosw2v" path="res://ui/game-ui/game-button.tscn" id="2_52mp2"]
[ext_resource type="PackedScene" uid="uid://d1q1oo6dpavt8" path="res://ui/game-ui/game-panel.tscn" id="2_qb813"]

[node name="MainMenuSelectDifficulty" type="VBoxContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -143.0
offset_top = -143.5
offset_right = 143.0
offset_bottom = 143.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8
script = ExtResource("1_pomqh")

[node name="Header" parent="." instance=ExtResource("2_8ovqq")]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
label = "Choose The Difficulty"

[node name="Selector" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 8

[node name="List" parent="Selector" instance=ExtResource("2_qb813")]
layout_mode = 2

[node name="Margin" type="MarginContainer" parent="Selector/List"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="List" type="VBoxContainer" parent="Selector/List/Margin"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2

[node name="Difficulty" parent="Selector" instance=ExtResource("2_qb813")]
layout_mode = 2

[node name="Margin" type="MarginContainer" parent="Selector/Difficulty"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Label" type="RichTextLabel" parent="Selector/Difficulty/Margin"]
custom_minimum_size = Vector2(256, 256)
layout_mode = 2
theme_override_font_sizes/bold_italics_font_size = 14
theme_override_font_sizes/italics_font_size = 14
theme_override_font_sizes/mono_font_size = 14
theme_override_font_sizes/normal_font_size = 14
theme_override_font_sizes/bold_font_size = 14
text = "Here is some description of the difficulty

* In rich text
* So rich text"

[node name="Controls" parent="." instance=ExtResource("2_qb813")]
layout_mode = 2

[node name="Margin" type="MarginContainer" parent="Controls"]
layout_mode = 2
theme_override_constants/margin_top = 8
theme_override_constants/margin_bottom = 8

[node name="Layout" type="HBoxContainer" parent="Controls/Margin"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="Return" parent="Controls/Margin/Layout" instance=ExtResource("2_52mp2")]
custom_minimum_size = Vector2(87, 48)
layout_mode = 2
label = "Return"
font_size = 20

[node name="Continue" parent="Controls/Margin/Layout" instance=ExtResource("2_52mp2")]
custom_minimum_size = Vector2(108, 48)
layout_mode = 2
label = "Continue"
font_size = 20

[connection signal="button_up" from="Controls/Margin/Layout/Return" to="." method="_return_from"]
[connection signal="button_up" from="Controls/Margin/Layout/Continue" to="." method="_continue_to"]
